<resources>
    <string name="app_name">HomeWork_Kotlin</string>
    <string name="ac">AC</string>
    <string name="close_bracket">)</string>
    <string name="right_bracket">(</string>
    <string name="delete_button">delete\nnum</string>
    <string name="division_button">/</string>
    <string name="multiply_button">*</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="btn_6">6</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_8">8</string>
    <string name="equals_button">=</string>
    <string name="btn_9">9</string>
    <string name="btn_7">7</string>
    <string name="btn_0">0</string>
    <string name="dot_button">.</string>
</resources>